--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>Microdata</title>
 </head>
 <body>
-<div itemscope itemtype="http://schema.org/Person">
-	<span itemprop="name">Angel</span>
-	<span itemprop="age">12</span>
+<div itemscope itemtype="http://schema.org/Article">
+	<span itemprop="author">Angel</span>
+	<span itemprop="wordCount">12</span>
 </div>
 </body>
 </html>
