--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
 	<title>Microdata</title>
+	<script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "url": "https://developedbyangel.github.io/MyPortfolio/",
+      "logo": "https://developedbyangel.github.io/MyPortfolio/wings.png"
+    }
+    </script>
 </head>
 <body>
 <div itemscope itemtype="http://schema.org/Article">
