--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Organization",
+      "@type": "Person",
       "url": "https://developedbyangel.github.io/MyPortfolio/",
       "logo": "https://developedbyangel.github.io/MyPortfolio/wings.png"
     }
@@ -15,6 +15,10 @@
 <div itemscope itemtype="http://schema.org/Article">
 	<span itemprop="author">Angel</span>
 	<span itemprop="wordCount">12</span>
+</div>
+<div vocab="http://schema.org" typeOf="Orgaization">
+	<span property="name">ABC</span>
+	<span property=""></span>
 </div>
 </body>
 </html>
