--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "Person",
-      "url": "https://developedbyangel.github.io/MyPortfolio/",
+      "@type": "LocalBusiness",
+      "url": "https://developedbyangel.github.io/MyPortfolio">Hello</script>/",
       "logo": "https://developedbyangel.github.io/MyPortfolio/wings.png"
     }
     </script>
@@ -16,9 +16,9 @@
 	<span itemprop="author">Angel</span>
 	<span itemprop="wordCount">12</span>
 </div>
-<div vocab="http://schema.org" typeOf="Orgaization">
+<div vocab="http://schema.org" typeOf="Organization">
 	<span property="name">ABC</span>
-	<span property=""></span>
+	<span property="url"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a></span>
 </div>
 </body>
 </html>
