--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "url": "https://developedbyangel.github.io/MyPortfolio">Hello</script>/",
+      "url": "https://developedbyangel.github.io/MyPortfolio",
       "logo": "https://developedbyangel.github.io/MyPortfolio/wings.png"
     }
     </script>
@@ -18,7 +18,7 @@
 </div>
 <div vocab="http://schema.org" typeOf="Organization">
 	<span property="name">ABC</span>
-	<span property="url"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a></span>
+	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
 </div>
 </body>
 </html>
