--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<span itemprop="author">Angel</span>
 	<span itemprop="wordCount">12</span>
 </div>
-<div vocab="http://schema.org" typeOf="Organization">
+<div vocab="http://xmlns.com/foaf/0.1/" typeOf="Organization">
 	<span property="name">ABC</span>
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
 </div>
