--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <div vocab="http://xmlns.com/foaf/0.1/" typeOf="Organization">
 	<span property="name">ABC</span>
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
+	<span property="nam" content="ok">
 </div>
 </body>
 </html>
