--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<meta name="msvalidate.01" content="2E04C3DE2079C12BACBF8F91E6DE825E" />
 	<title>Microdata</title>
 	<script type="application/ld+json">
     {
