--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div vocab="http://purl.org/dc/elements/1.1/" typeOf="contributor">
 	<span property="creator">ABC</span>
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
-	<span property="nam" content="ok">
+	<span property="nam" content="ok">ok</span>
 </div>
 </body>
 </html>
