--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     }
     </script>
 </head>
-<body>
+<body><!-- 
 <div itemscope itemtype="http://schema.org/Article">
 	<span itemprop="author">Angel</span>
 	<span itemprop="wordCount">12</span>
-</div>
+</div> -->
 <div vocab="http://purl.org/dc/elements/1.1/" typeOf="contributor">
 	<span property="creator">ABC</span>
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
