--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
 	<span property="nam" content="ok">ok</span>
 </div>
+	<div vocab="http://purl.org/dc/elements/1.1/" typeOf="contributor">
+	<span property="creator">ABC</span>
+	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
+	<span property="nam" content="ok">ok</span>
+	<!-- 
+<div vocab="http://xmlns.com/foaf/0.1/" typeOf="Organization">
+	<span property="name">ABC</span>
+	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
+	<span property="nam" content="ok"> -->
+</div>
 </body>
 </html>
