--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:foaf="http://xmlns.com/foaf/0.1/">
 <head>
 
 <meta name="msvalidate.01" content="2E04C3DE2079C12BACBF8F91E6DE825E" />
@@ -14,6 +14,9 @@
     </script>
 </head>
 <body>
+	<foaf:Person rdf:about="http://richard.cyganiak.de/foaf.rdf#cygri">
+        <foaf:nick>cygri</foaf:nick>
+    </foaf:Person>
 <div itemscope itemtype="http://schema.org/Article">
 	<span itemprop="author">Angel</span>
 	<span itemprop="wordCount">12</span>
