--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     </script>
 </head>
 <body>
-	<foaf:Person rdf:about="http://richard.cyganiak.de/foaf.rdf#cygri">
-        <foaf:nick>cygri</foaf:nick>
-    </foaf:Person>
+	
 <div itemscope itemtype="http://schema.org/Article">
 	<span itemprop="author">Angel</span>
 	<span itemprop="wordCount">12</span>
@@ -28,6 +26,11 @@
 </div>
 	
 <div vocab="http://xmlns.com/foaf/0.1/" typeOf="Organization">
+	<span property="name">ABC</span>
+	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
+	<span property="nam" content="ok">
+</div>
+<div vocab="http://schema.org/" typeOf="Organization">
 	<span property="name">ABC</span>
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
 	<span property="nam" content="ok">
