--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </div> -->
 <div vocab="http://schema.org/" typeOf="Organization">
 	<span property="name">ABC</span>
-	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
+	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Helo</a>
 </div>
 </body>
 </html>
