--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 <div itemscope itemtype="http://schema.org/Article">
 	<span itemprop="author">Angel</span>
 	<span itemprop="wordCount">12</span>
+</div>
+<div itemscope itemtype="http://schema.org/Organization">
+	<span itemprop="name">abc</span>
+	<span itemprop="logo"><a href="https://developedbyangel.github.io/MyPortfolio/wings.png">ok</a></span>
+	<span itemprop="address">.,</span>
+	<span itemprop="contact">99999</span>
 </div><!-- 
 <div vocab="http://purl.org/dc/elements/1.1/" typeOf="contributor">
 	<span property="creator">ABC</span>
