--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <meta name="msvalidate.01" content="2E04C3DE2079C12BACBF8F91E6DE825E" />
 	<title>Microdata</title>
-	<script type="application/ld+json">
+<!-- 	<script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
@@ -12,9 +12,9 @@
       "logo": "https://developedbyangel.github.io/MyPortfolio/wings.png"
     }
     </script>
-</head>
+ --></head>
 <body>
-	
+<!-- 	
 <div itemscope itemtype="http://schema.org/Article">
 	<span itemprop="author">Angel</span>
 	<span itemprop="wordCount">12</span>
@@ -24,7 +24,7 @@
 	<span itemprop="logo"><a href="https://developedbyangel.github.io/MyPortfolio/wings.png">ok</a></span>
 	<span itemprop="address">.,</span>
 	<span itemprop="contact">99999</span>
-</div><!-- 
+</div>
 <div vocab="http://purl.org/dc/elements/1.1/" typeOf="contributor">
 	<span property="creator">ABC</span>
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
@@ -35,10 +35,38 @@
 	<span property="name">ABC</span>
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Hello</a>
 	<span property="nam" content="ok"></span>
-</div> -->
+</div>
 <div vocab="http://schema.org/" typeOf="Organization">
 	<span property="name">ABC</span>
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Helo</a>
+</div> -->
+<div itemscope itemtype="https://schema.org/Organization">
+  <span itemprop="name">Google.org (GOOG)</span>
+
+Contact Details:
+  <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+    Main address:
+      <span itemprop="streetAddress">38 avenue de l'Opera</span>
+      <span itemprop="postalCode">F-75002</span>
+      <span itemprop="addressLocality">Paris, France</span>
+    ,
+  </div>
+    Tel:<span itemprop="telephone">( 33 1) 42 68 53 00 </span>,
+    Fax:<span itemprop="faxNumber">( 33 1) 42 68 53 01 </span>,
+    E-mail: <span itemprop="email">secretariat(at)google.org</span>
+
+Members:
+- National Scientific Members in 100 countries and territories: Country1, Country2, ...
+- Scientific Union Members, 30 organizations listed in this Yearbook:
+List of Alumni:
+ <span itemprop="alumni" itemscope itemtype="https://schema.org/Person">
+   <span itemprop="name">Jack Dan</span>
+ </span>,
+ <span itemprop="alumni" itemscope itemtype="https://schema.org/Person">
+   <span itemprop="name">John Smith</span>
+ </span>,
+
+History:
 </div>
 </body>
 </html>
