--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </div> -->
 <div itemscope itemtype="https://schema.org/Organization">
   <span itemprop="name">Google.org (GOOG)</span>
+	<span itemprop="logo"><a href="https://developedbyangel.github.io/MyPortfolio/wings.png">ok</a></span>
 
 Contact Details:
   <div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
