--- a/index.html
+++ b/index.html
@@ -12,7 +12,42 @@
       "logo": "https://developedbyangel.github.io/MyPortfolio/wings.png"
     }
     </script>
- --></head>
+
+ -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Paris, France",
+    "postalCode": "F-75002",
+    "streetAddress": "38 avenue de l'Opera"
+  },
+  "email": "secretariat(at)google.org",
+  "faxNumber": "( 33 1) 42 68 53 01",
+  "member": [
+    {
+      "@type": "Organization"
+    },
+    {
+      "@type": "Organization"
+    }
+  ],
+  "alumni": [
+    {
+      "@type": "Person",
+      "name": "Jack Dan"
+    },
+    {
+      "@type": "Person",
+      "name": "John Smith"
+    }
+  ],
+  "name": "Google.org (GOOG)",
+  "telephone": "( 33 1) 42 68 53 00"
+}
+</script></head>
 <body>
 <!-- 	
 <div itemscope itemtype="http://schema.org/Article">
@@ -69,5 +104,40 @@ List of Alumni:
 
 History:
 </div>
+
+
+
+<div vocab="https://schema.org/" typeof="Organization">
+  <span property="name">Google.org (GOOG)</span>
+
+Contact Details:
+  <div property="address" typeof="PostalAddress">
+    Main address:
+      <span property="streetAddress">38 avenue de l'Opera</span>
+      <span property="postalCode">F-75002</span>
+      <span property="addressLocality">Paris, France</span>
+    ,
+  </div>
+    Tel:<span property="telephone">( 33 1) 42 68 53 00 </span>,
+    Fax:<span property="faxNumber">( 33 1) 42 68 53 01 </span>,
+    E-mail: <span property="email">secretariat(at)google.org</span>
+
+Members:
+- National Scientific Members in 100 countries and territories: Country1, Country2, ...
+- Scientific Union Members, 30 organizations listed in this Yearbook:
+List of Alumni:
+ <span property="alumni"  typeof="Person">
+   <span property="name">Jack Dan</span>
+ </span>,
+ <span property="alumni"  typeof="Person">
+   <span property="name">John Smith</span>
+ </span>
+History:
+</div>
+
+
+
+
+
 </body>
 </html>
