--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@ History:
 
 <div vocab="https://schema.org/" typeof="Organization">
   <span property="name">Google.org (GOOG)</span>
+	<img property="logo" src="https://developedbyangel.github.io/MyPortfolio/wings.png"/>
 
 Contact Details:
   <div property="address" typeof="PostalAddress">
