--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </script>
 
  -->
-<script type="application/ld+json">
+<!-- <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
@@ -47,7 +47,7 @@
   "name": "Google.org (GOOG)",
   "telephone": "( 33 1) 42 68 53 00"
 }
-</script></head>
+</script> --></head>
 <body>
 <!-- 	
 <div itemscope itemtype="http://schema.org/Article">
