--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
 	<meta property="url" content="https://developedbyangel.github.io/MyPortfolio"><a href="https://developedbyangel.github.io/MyPortfolio">Helo</a>
 </div> -->
 <div itemscope itemtype="https://schema.org/Organization">
+	
+ <span itemprop="alumni" itemscope itemtype="https://schema.org/Person">
+   <span itemprop="name">John Smith</span>
+ </span>,
   <span itemprop="name">Google.org (GOOG)</span>
 	<img itemprop="logo" src="https://developedbyangel.github.io/MyPortfolio/wings.png"/>
 
